--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.31.7",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.513.0",
     "react": "^19.1.0",
+    "react-charts": "^3.0.0-beta.57",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.1",
+    "recharts": "^3.0.2",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
