--- a/backEnd/.env
+++ b/backEnd/.env
@@ -1,1 +1,11 @@
 SUPABASE_DB_URL=postgresql://postgres.geqnbgshgrnptkpvkujg:9e8DWj9budFkBdA1@aws-0-eu-central-1.pooler.supabase.com:6543/postgres
+
+# Clerk Configuration
+CLERK_PUBLISHABLE_KEY=pk_test_Y2hvaWNlLWRvcnktODIuY2xlcmsuYWNjb3VudHMuZGV2JA
+CLERK_SECRET_KEY=sk_test_cqaDhXhfK7Sd327F9M1i2M04ZJTrzSMmc1MJDzjzmF
+CLERK_WEBHOOK_SIGNING_SECRET = whsec_4YnMUiI0b0BcF8APAPQRbhdBEzYZirSK
+# Server Configuration
+PORT=8090
+NODE_ENV=development
+# Frontend URL for CORS
+FRONTEND_URL=http://localhost:5173
