--- a/frontend/astro-app/package.json
+++ b/frontend/astro-app/package.json
@@ -9,7 +9,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^4.3.0",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
     "astro": "^5.12.8",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "toastify-js": "^1.12.0"
   },
   "devDependencies": {
