--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -17,5 +17,8 @@
     "express": "^5.1.0",
     "nodemon": "^3.1.10",
     "postgres": "^3.4.7"
+  },
+  "devDependencies": {
+    "supabase": "^2.34.3"
   }
 }
