--- a/backEnd/.env
+++ b/backEnd/.env
@@ -8,4 +8,4 @@ CLERK_WEBHOOK_SIGNING_SECRET = whsec_QESlIrmOyMPJwWxjsHsBVx9uJZmaY3eM
 PORT=8090
 NODE_ENV=development
 # Frontend URL for CORS
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://daily-lesson-platform.onrender.com
